--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto" data-theme="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><script src="/Blog/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=Blog/livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
@@ -9,17 +9,17 @@
 <meta name="keywords" content="">
 <meta name="description" content="About - 一人行者">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="canonical" href="http://localhost:1313/Blog/about/">
+<link crossorigin="anonymous" href="/Blog/assets/css/stylesheet.343cc480b9ffc8f04ccbe5e968ad674880cab773ec19905e93033065c1e7a804.css" integrity="sha256-NDzEgLn/yPBMy&#43;XpaK1nSIDKt3PsGZBekwMwZcHnqAQ=" rel="preload stylesheet" as="style">
+<link rel="icon" href="http://localhost:1313/Blog/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/Blog/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/Blog/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/Blog/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/Blog/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/about/index.xml" title="rss">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/about/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/Blog/about/index.xml" title="rss">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/Blog/about/">
 <noscript>
     <style>
         #theme-toggle,
@@ -77,7 +77,7 @@
     <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="一人行者 (Alt + H)">一人行者</a>
+            <a href="http://localhost:1313/Blog/" accesskey="h" title="一人行者 (Alt + H)">一人行者</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -103,27 +103,27 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/" title="主页">
+                <a href="http://localhost:1313/Blog/" title="主页">
                     <span>主页</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/archives/" title="文章">
+                <a href="http://localhost:1313/Blog/archives/" title="文章">
                     <span>文章</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/categories/" title="分类">
+                <a href="http://localhost:1313/Blog/categories/" title="分类">
                     <span>分类</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/tags/" title="标签">
+                <a href="http://localhost:1313/Blog/tags/" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/about/" title="关于">
+                <a href="http://localhost:1313/Blog/about/" title="关于">
                     <span class="active">关于</span>
                 </a>
             </li>
@@ -139,7 +139,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">一人行者</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/Blog/">一人行者</a></span> · 
 
     <span>
         Powered by
